# Mosthy

./: .clang-tidy  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: ArgumentHandler.h  INotifyWrapper.h  ProcessManager.h  Util.h
src/: ArgumentHandler.cpp  INotifyWrapper.cpp  ProcessManager.cpp  main.cpp
src/lib/: ArgumentHandler.cpp  INotifyWrapper.cpp  ProcessManager.cpp  Util.cpp
tests/: INotifyWrapper.cpp  ProcessManager.cpp
